--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 </h1>
 <img width="302" height="302" align="left" alt="" src="https://i.loli.net/2019/07/06/5d20b3b53e3f123724.png" />
 <a href="//shang.qq.com/wpa/qunwpa?idkey=20258f49a1f3328f2b300c4b07eac2718c45bc5c8f4076550763d1b0a2b3c582" target="_blank"><img title="黑榜" alt="黑榜" src="//pub.idqqimg.com/wpa/images/group.png" border="0" /></a>
-<p>实际上由于咱们的好市长@主宰建群时手残导致无法认证拥有群号，所以出此下策。因时间仓促，(着实有点丑  小声哔哔...)但本网页为开源网页欢迎各路大神前来提交push。git链接：github.com/RalphRen/Fast_QQ。</p>
+<p>实际上由于咱们的好市长@主宰建群时手残导致无法认证拥有群号，所以出此下策。因时间仓促 (着实有点丑  小声哔哔...) 但本网页为开源网页欢迎各路大神前来提交push。git链接：github.com/RalphRen/Fast_QQ。</p>
