--- a/index.html
+++ b/index.html
@@ -1,10 +1,68 @@
-<h1>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+<title>导航页面</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+<link type="text/css" href="css/humanity/jquery-ui-1.8.18.custom.css" rel="stylesheet" />	
 
-	黑榜加群链接
+<!--[if lt IE 9]>
+   <div style=' clear: both; text-align:center; position: relative;'>
+     <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
+       <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+    </a>
+  </div>
+<![endif]-->
+<!--[if lt IE 9]>
+	<script src="js/html5.js"></script>
+	<link rel="stylesheet" href="css/ie.css"> 
+<![endif]-->
+</head>
+<body>
+	<div>
+	<section>
+		<div id="page1">
+			<h2><span>中转站</span><img src="images/star.png" alt=""></h2>
+			<div class="container_12">
+				<div class="wrapper">
+					<div class="grid_4">
+						<div class="box2">
+							<div class="dropcap"><img src="images/page_img1.png" alt=""><span>NAS</span></div>
+							<ul class="list-1">
+								<li><a href="http://jump.pixelcat.top:5000/" target="_blank" rel="noopener noreferrer">管理页面</a></li>
+								<li><a href="http://jump.pixelcat.top:5003/" target="_blank" rel="noopener noreferrer">Transmission</a></li>
+								<li><a href="http://jump.pixelcat.top:5002/" target="_blank" rel="noopener noreferrer">h5ai</a></li>
+								<li><a href="http://jump.pixelcat.top:5000/qcenter/" target="_blank" rel="noopener noreferrer">Q'center</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="grid_4">
+						<div class="box2">
+							<div class="dropcap"><img src="images/page_img2.png" alt=""><span>ROUTER</span></div>
+							<ul class="list-1">
+								<li><a href="https://jump.pixelcat.top:8443/" target="_blank" rel="noopener noreferrer">管理页面</a></li>
+								<li><a href="#">N/A</a></li>
+								<li><a href="#">N/A</a></li>
+								<li><a href="#">N/A</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="grid_4">
+						<div class="box2">
+							<div class="dropcap"><img src="images/page_img3.png" alt=""><span>ECS</span></div>
+							<ul class="list-1">
+								<li><a href="https://ecs-cn-zhangjiakou.console.aliyun.com/">管理页面</a></li>
+								<li><a href="https://www.pixelcat.top/">WordPress</a></li>
+								<li><a href="http://www.pixelcat.top:9999/ralph_ren">宝塔</a></li>
+								<li><a href="#">N/A</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<footer>No Copyrights @2020</footer>
+		</div>
+	</section></div>
+</body>
+</html>
 
-</h1>
-<a href="//shang.qq.com/wpa/qunwpa?idkey=20258f49a1f3328f2b300c4b07eac2718c45bc5c8f4076550763d1b0a2b3c582" target="_blank"><img title="黑榜" alt="黑榜" src="https://i.loli.net/2019/07/06/5d20b3b53e3f123724.png" border="0" /></a>
-<p>实际上由于咱们的好市长@主宰建群时手残导致无法认证拥有群号，所以出此下策。因时间仓促 (着实有点丑  小声哔哔...) 但本网页为开源网页欢迎各路大神前来提交push。git链接：github.com/RalphRen/Fast_QQ。</p>
-<p>点击二维码加群，如链接失效请手动保存二维码并在QQ内手动扫码</p>
-
-<p>由R.拉尔夫提供支持(但并无版权...主要是不敢打工作室的logo... :) </p>
