--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<div class="dropcap"><img src="images/page_img2.png" alt=""><span>ROUTER</span></div>
 							<ul class="list-1">
 								<li><a href="https://jump.pixelcat.top:8443/" target="_blank" rel="noopener noreferrer">管理页面</a></li>
-								<li><a href="#">N/A</a></li>
+								<li><a href="https://jump.pixelcat.top:4200/" target="_blank" rel="noopener noreferrer">Shell In A Box</a></li>
 								<li><a href="#">N/A</a></li>
 								<li><a href="#">N/A</a></li>
 							</ul>
@@ -60,6 +60,32 @@
 					</div>
 				</div>
 			</div>
+			<footer>修改或设置aliddns.conf参数：</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh setconf</footer>
+			<footer>检测aliddns.conf所有域名是否成功解析：</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh check</footer>
+			<footer>或</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh check 0</footer>
+			<footer>增加或更新aliddns.conf所有域名:</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh restart</footer>
+			<footer>或 </footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh restart 0</footer>
+			<footer>删除aliddns.conf所有域名:</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh remove 0</footer>
+			<footer>或</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh removeall</footer>
+			<footer>设置aliddns.conf所有域名解析记录为启用:</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 1</footer>
+			<footer>设置aliddns.conf所有域名解析记录为禁用:</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 0</footer>
+			<footer>检测客户端状态：</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh client ipv4</footer>
+			<footer>或</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh client ipv6</footer>
+			<footer>检测公网IP：</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh checkwanip</footer>
+			<footer>显示日志：</footer>
+			<footer>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh showlog</footer>
 			<footer>No Copyrights @2020</footer>
 		</div>
 	</section></div>
