--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<div class="dropcap"><img src="images/page_img2.png" alt=""><span>ROUTER</span></div>
 							<ul class="list-1">
 								<li><a href="https://jump.pixelcat.top:8443/" target="_blank" rel="noopener noreferrer">管理页面</a></li>
-								<li><a href="https://jump.pixelcat.top:4200/" target="_blank" rel="noopener noreferrer">Shell In A Box</a></li>
+								<li><a href="http://jump.pixelcat.top:4200/" target="_blank" rel="noopener noreferrer">Shell In A Box</a></li>
 								<li><a href="#">N/A</a></li>
 								<li><a href="#">N/A</a></li>
 							</ul>
