--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="page1">
 		<h1><span>中转站</span><img src="images/star.png" alt=""></h1>
 		<h2> lalala </h2>
-			<div class="container_12">
+			<div class="container">
 				<div class="wrapper">
 					<div class="grid_4">
 						<div class="box">
