--- a/index.html
+++ b/index.html
@@ -48,32 +48,32 @@
 				</div>
 			</div>
 			<div id="textbox">
-			<div>
-			  <p>修改或设置aliddns.conf参数：</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh setconf</p>
-			  <p>检测aliddns.conf所有域名是否成功解析：</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh check 0</p>
-			  <p>增加或更新aliddns.conf所有域名:</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh restart</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh restart 0</p>
-			  <p>设置aliddns.conf所有域名解析记录为启用:</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 1</p>
-			  <p>显示日志：</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh showlog</p>
-			</div>
-			<div>
-			  <p>删除aliddns.conf所有域名:</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh remove 0</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh removeall</p>
-			  <p>设置aliddns.conf所有域名解析记录为启用:</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 1</p>
-			  <p>设置aliddns.conf所有域名解析记录为禁用:</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 0</p>
-			  <p>检测客户端状态：</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh client ipv4</p>
-			  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh client ipv6</p>
-			  <p>fin</p>
-			</div>
+				<div>
+				  <p>修改或设置aliddns.conf参数：</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh setconf</p>
+				  <p>检测aliddns.conf所有域名是否成功解析：</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh check 0</p>
+				  <p>增加或更新aliddns.conf所有域名:</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh restart</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh restart 0</p>
+				  <p>设置aliddns.conf所有域名解析记录为启用:</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 1</p>
+				  <p>显示日志：</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh showlog</p>
+				</div>
+				<div>
+				  <p>删除aliddns.conf所有域名:</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh remove 0</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh removeall</p>
+				  <p>设置aliddns.conf所有域名解析记录为启用:</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 1</p>
+				  <p>设置aliddns.conf所有域名解析记录为禁用:</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh status 0 0</p>
+				  <p>检测客户端状态：</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh client ipv4</p>
+				  <p>sh /jffs/myscripts/sharealiddns/etc/init.d/sharealiddns.sh client ipv6</p>
+				  <p>Fin</p>
+				</div>
 			</div>
 			<footer>No Copyrights @2020</footer>
 	</div>
