--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="page1">
 		<h1><span>中转站</span><img src="images/star.png" alt=""></h1>
-		<h2> lalala </h2>
+		<h2> PixelCat </h2>
 			<div class="container">
 				<div class="wrapper">
 					<div class="grid_4">
